--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <h2>TELL US EVERY- THING</h2>
+          <h2 style="font-weight: bold">TELL US EVERY- THING</h2>
           <h4>Our Business Phiosophy</h4>
           <p>
             We strive to unlock collective wisdom and go beyond whats possible
@@ -345,7 +345,7 @@
     </div>
 
     <!-- footer  -->
-    <footer id="footer1" class="footer bg-primary1 mt-4">
+    <footer id="footer1" class="footer text-white bg-primary1 mt-4">
       <div class="container">
         <div class="row">
           <div class="col-md-3 mt-5">
@@ -377,10 +377,13 @@
           </div>
           <div class="col-md-3 mt-5">
             <h5>In Association with</h5>
-            <ul class="list-unstyled gap-2">
+            <ul class="list-unstyled">
               <li>
                 <a href="#"
-                  ><img src="./img/Ultimez Lab.png" alt="Ultimez Lab Logo"
+                  ><img
+                    class="mb-2"
+                    src="./img/Ultimez Lab.png"
+                    alt="Ultimez Lab Logo"
                 /></a>
               </li>
               <li>
